day4/11-backend-with-service-account.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cimple-back-deployment
  labels:
    app: cimple-back
spec:
  replicas: 1
  selector:
    matchLabels:
      app: cimple-back
  template:
    metadata:
      name: cimple-back
      labels:
        app: cimple-back
    spec:
      serviceAccount: backend-sa
      volumes:
        - name: config-data
          emptyDir: {}

      containers:
        - name: cimple-back
          image: taksan/cimple-back:v2
          ports:
            - containerPort: 8000
              name: http
          volumeMounts:
            - name: config-data
              mountPath: /app/logs
        - name: cimple-eviewer-collector
          image: taksan/cimple-eviewer-collector:v1
          volumeMounts:
            - name: config-data
              mountPath: /opt/
