day4/6-cimple-front-with-namespace.yml
apiVersion: v1
kind: Pod
metadata:
  name: cimple-front
  namespace: dev
spec:
  containers:
  - name: cimple-front
	image: taksan/cimple-front:v1
	ports:
	- containerPort: 80
	  name: http
