day4/cimple-back-deployment-with-sa.yml
apiVersion: apps/v1
kind: Deployment
metadata:
 name: cimple-back-deployment
 labels:
   app: cimple-back
spec:
 replicas: 1
 selector:
   matchLabels:
     app: cimple-back
 template:
   metadata:
     name: cimple-back
     labels:
       app: cimple-back
   spec:
    serviceAccount: backend-sa
    volumes:
    - name: config-data
      emptyDir: {}
    - name: audit-log
      emptyDir: {}
    containers:
    - name: cimple-back
      image: taksan/cimple-back:v1
      ports:
      - containerPort: 8000
        name: http
      startupProbe:
        httpGet:
          path: /health
          port: http
        periodSeconds: 10
        failureThreshold: 5
      readinessProbe:
        httpGet:
          path: /health
          port: http
        failureThreshold: 30
        periodSeconds: 10
      livenessProbe:
        httpGet:
          path: /health
          port: http
        failureThreshold: 30
        periodSeconds: 10
      volumeMounts:
      - name: audit-log
        mountPath: /app/logs
    - name: cimple-eviewer-collector
      image: taksan/cimple-eviewer-collector:v1
      volumeMounts:
      - name: config-data
        mountPath: /opt/
      - name: audit-log
        mountPath: /app/logs
