day4/cimple-eviewer-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cimple-eviewer-deployment
  labels:
    app: cimple-eviewer
spec:
  replicas: 1
  selector:
    matchLabels:
      app: cimple-eviewer
  template:
    metadata:
      name: cimple-eviewer
      labels:
        app: cimple-eviewer
    spec:
      containers:
      - name: cimple-eviewer
        image: taksan/cimple-eviewer:v1
        ports:
        - containerPort: 5000
          name: http
        startupProbe:
          httpGet:
            path: /health
            port: http
          periodSeconds: 10
          failureThreshold: 5
        readinessProbe:
          httpGet:
            path: /health
            port: http
          failureThreshold: 30
          periodSeconds: 10
        livenessProbe:
          httpGet:
            path: /health
            port: http
          failureThreshold: 30
          periodSeconds: 10
