day4/cimple-front-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cimple-front-deployment
  labels:
    app: cimple-front
spec:
  replicas: 1
  selector:
    matchLabels:
      app: cimple-front
  template:
    metadata:
      name: cimple-front
      labels:
        app: cimple-front
    spec:
      containers:
      - name: cimple-front
        image: taksan/cimple-front:v2
        ports:
        - containerPort: 80
          name: http
