day4/all.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cimple-front-deployment
  labels:
    app: cimple-front
spec:
  replicas: 1
  selector:
    matchLabels:
      app: cimple-front
  template:
    metadata:
      name: cimple-front
      labels:
        app: cimple-front
    spec:
      containers:
      - name: cimple-front
        image: taksan/cimple-front:v2
        ports:
        - containerPort: 80
          name: http
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cimple-eviewer-deployment
  labels:
    app: cimple-eviewer
spec:
  replicas: 1
  selector:
    matchLabels:
      app: cimple-eviewer
  template:
    metadata:
      name: cimple-eviewer
      labels:
        app: cimple-eviewer
    spec:
      containers:
      - name: cimple-eviewer
        image: taksan/cimple-eviewer:v1
        ports:
        - containerPort: 5000
          name: http
        startupProbe:
          httpGet:
            path: /health
            port: http
          periodSeconds: 10
          failureThreshold: 5
        readinessProbe:
          httpGet:
            path: /health
            port: http
          failureThreshold: 30
          periodSeconds: 10
        livenessProbe:
          httpGet:
            path: /health
            port: http
          failureThreshold: 30
          periodSeconds: 10
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cimple-back-deployment
  labels:
    app: cimple-back
spec:
  replicas: 1
  selector:
    matchLabels:
      app: cimple-back
  template:
    metadata:
      name: cimple-back
      labels:
        app: cimple-back
    spec:
      volumes:
        - name: config-data
          emptyDir: {}

      containers:
        - name: cimple-back
          image: taksan/cimple-back:v1
          ports:
            - containerPort: 8000
              name: http
          volumeMounts:
            - name: config-data
              mountPath: /app/logs
        - name: cimple-eviewer-collector
          image: taksan/cimple-eviewer-collector:v1
          volumeMounts:
            - name: config-data
              mountPath: /opt/
---
apiVersion: v1
kind: Service
metadata:
  name: cimple-front
spec:
  selector:
    app: cimple-front
  ports:
    - protocol: TCP
      port: 80
      targetPort: http
---
apiVersion: v1
kind: Service
metadata:
  name: cimple-back
spec:
  type: LoadBalancer
  selector:
    app: cimple-back
  ports:
    - protocol: TCP
      port: 80
      targetPort: http
---
apiVersion: v1
kind: Service
metadata:
  name: cimple-eviewer
spec:
  selector:
    app: cimple-eviewer
  type: LoadBalancer
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5000
---
