day4/cimple-front-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: cimple-front
spec:
  ingressClassName: nginx
  rules:
    - host: front.cimple.bootcamp
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: cimple-front
                port:
                  number: 80
